# agent-infer

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md  setup.sh
bench-output/2026-05-20-pytorch-cuda-opd-baseline/: nvidia-smi.txt  pytorch_cuda_opd_baseline.py  results.json  run.txt
crates/cuda-kernels/: build.rs
crates/xgrammar-sys/: Cargo.toml  build.rs
crates/xgrammar-sys/src/: lib.rs  xgrammar_ffi.cpp  xgrammar_ffi.h
docs/: bench-and-trace-spec.md  codebase-map.md  environment.md  index.md  support-matrix.md
docs/plans/: 2026-05-10-dsv4-qwen36-substrate-audit.md  2026-05-10-phase2-step3-qwen3-caller-optin-patch.md  2026-05-10-rope-yarn-phase3-cuda-bench-plan.md  2026-05-12-scheduler-preprocess-pipeline.md  2026-05-20-opd-cpu-perf-codex-handoffs.md  M_b3-prefix-aware-admission-step1-directive.md  M_d-tier-kv-spec-decode-coordination.md  M_e-world-first-bench-gauntlet.md  M_medusa-phase1a-dataset-directive.md  M_medusa-phase1b-substrate-brief.md  M_medusa-required-path.md  M_pf-graph-v2.md  M_pf83_h8_fix_patch.md  (+15 more)
infer/: Cargo.toml
scripts/: bench_36_warmmix_direct.py  bench_agent_trace.py  bench_pf83_ab.sh  convert_gptq_w4a16_to_w4a8_marlin.py  diag_gptq_w4a8_magic_num_bound.py  diag_w4a8_pack_roundtrip.py  eval_ppl_pf83.py  gen_36_warm_prefix_mix.py  pf83_bench_health.sh  pf83_h8_revert.sh  pf83_license_sequence.sh  post_p24_commit_pipeline.sh  profile_dsv4_single_decode_nsys.sh  quantize_qwen3_w4a8.py  round4_apply_and_bench.sh  setup_qwen3_yarn_config.py  task43_hypothesis_test.sh
tests/: cli_tiny_fixture_live.rs
(+668 files in other folders)
